# token-watch

./: README.md  package.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
src/: App.css  App.tsx  CompactView.tsx  SchedulingView.tsx  UsageView.tsx  dispatch.ts  main.tsx  tray.ts  types.ts
src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json  tray-popup.json
src-tauri/src/: api.rs  credentials.rs  dispatch.rs  lib.rs  main.rs  usage_manager.rs
src/components/: DispatchSection.tsx
src/hooks/: useUsage.ts
tests/frontend/: App.test.tsx  useUsage.test.tsx
